Replace `DataType#value` with new DataType API in production code.